--- a/journal/202111.md
+++ b/journal/202111.md
@@ -113,7 +113,7 @@ _Politeia is Decred's proposal system. It is used to request funding from the De
 New [Politeia](https://proposals.decred.org/) release is live! Highlights of v1.3.0:
 
 - billing statuses (will improve navigation and protect against invalid billing)
-- proposal statuses indicating the stage of the proposal's life cycle
+- proposal status indicating the stage of the proposal's life cycle
 - SEO tags for prettier search engine results
 - various GUI UX improvements
 - parallel trickling in politeiavoter for better privacy and reliability
@@ -321,11 +321,10 @@ Community stats as of Dec 1:
 
 In November the new [treasury](https://dcrdata.decred.org/treasury) received 10,206 DCR worth $1.1 million at the month's average rate of $108.13. 1,995 DCR was spent to pay contractors, consisting of 974 DCR for September and 1,021 DCR for October. The latter is worth $110K at November's rate, or $124K at October's billing rate of $121.57. As of Dec 6, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 743,661 DCR (73 million USD at $98.01).
 
-Two new proposals were submitted this month: { update status maybe }
+Two new proposals were submitted this month: 
 
-- A [proposal](https://proposals.decred.org/record/427e1d4) to change the subsidy (block reward) split from the current setting (60/30 PoW/PoS) to favor PoS (10/80) was submitted by @jy-p. If passed the work would be expected to be complete within a few weeks at a cost of no more than $30,000, and the change would take effect once it is introduced and voted on via a consensus change proposal. It ended up collecting 166 comments on Politeia and 60+ on [Reddit](https://www.reddit.com/r/decred/comments/r3jq5a/change_powpos_subsidy_split_from_6030_to_1080/).
-
-- A [proposal](https://proposals.decred.org/record/0ff082d) to extend the communications and content work of the Decred Arabia team with $10,600 for another 10-12 months - in the previous period in-person events were curtailed and the budget was under-spent.
+- A [proposal](https://proposals.decred.org/record/427e1d4) to change the subsidy (block reward) split from the current setting (60/30 PoW/PoS) to favor PoS (10/80) was submitted by @jy-p. The proposal passed in early December with approval of 92% and turnout of 78%, the work is expected to be complete within a few weeks at a cost of no more than $30,000, and the change would take effect once it is introduced and voted on via a consensus change proposal. The proposal ended up collecting 166 comments on Politeia (new record) and 60+ on [Reddit](https://www.reddit.com/r/decred/comments/r3jq5a/change_powpos_subsidy_split_from_6030_to_1080/).
+- A [proposal](https://proposals.decred.org/record/0ff082d) to extend the communications and content work of the Decred Arabia team with $10,600 for another 10-12 months - in the previous period in-person events were curtailed and the budget was under-spent. This proposal was approved in early December with approval of 98% and turnout of 61%.
 
 The [proposal](https://proposals.decred.org/record/c1f5b5c) for Economic Education and Outreach from @ammarooni was rejected with 33.6% Approval and turnout of 70%. However, this wasn't the end of the story as Ammar put up an address for donations, and this quickly [hit](https://twitter.com/Ammarooni/status/1458541211673931778) the target of $12K via 30 different transactions. He is now "charged up like a bison" and ready to deliver the proposed program.
 
@@ -369,14 +368,14 @@ F2Pool [announced](https://f2pool.io/mining/updates/#20211015) it will shutdown 
 
 Ledger Live users have reported problems with sending DCR from this wallet. Due to incorrect fee calculation, the transactions would get stuck in the mempool and lock coins. A workaround was [found](https://www.reddit.com/r/decred/comments/qoe0hu/ledger_live_sending_issues_and_workarounds/) where coin control feature could be used to unlock the funds.
 
-Someone has [reported](https://twitter.com/Mattgetsbarrel1/status/1458878453198073866) that DCR became the major placeholder (27%) in the PRIV index at FTX, which tracks 9 privacy coins, although this appears to be an [error](https://www.reddit.com/r/decred/comments/qru7vx/decred_is_the_majority_place_holder_of_the/) of rebalancing and the [weight](https://help.ftx.com/hc/en-us/articles/360027668812-Index-Calculation) of DCR is supposed to be lower. { really? }
+Someone has [reported](https://twitter.com/Mattgetsbarrel1/status/1458878453198073866){this link looks like just a chart, possibly because the tweet being linked to is set to only be visible to certain accounts} that DCR became the major placeholder (27%) in the PRIV index at FTX, which tracks 9 privacy coins, although this appears to be an [error](https://www.reddit.com/r/decred/comments/qru7vx/decred_is_the_majority_place_holder_of_the/) of rebalancing and the [weight](https://help.ftx.com/hc/en-us/articles/360027668812-Index-Calculation) of DCR is supposed to be lower. { really? }
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
 
 ## Outreach
 
-Decred now has an [Odysee channel](https://odysee.com/@Decred) where [YouTube](https://www.youtube.com/c/DecredChannel) content has been mirrored, just in case. As a bonus, it allows to watch Decred videos without visiting YouTube and Google. Odysee is powered by [LBRY](https://lbry.com), a decentralized protocol fair and robust content distribution (with optional monetization). Please consider supporting Decred videos if you use this platform.
+Decred now has an [Odysee channel](https://odysee.com/@Decred) where [YouTube](https://www.youtube.com/c/DecredChannel) content has been mirrored, just in case. As a bonus, it allows to watch Decred videos without visiting YouTube and Google. Odysee is powered by [LBRY](https://lbry.com), a decentralized protocol for fair and robust content distribution (with optional monetization). Please consider supporting Decred videos if you use this platform.
 
 October Decred Journal had an experimental custom announcement on Decred's [Instagram](https://www.instagram.com/decredproject/p/CWRRcJPp3zr/) page, in addition to all existing channels. Veteran Instagram users are welcome to support the account or advise how to grow it.
 
@@ -432,11 +431,11 @@ https://github.com/bochinchero/dcrsnapshots/blob/main/2021_11/2021-11_DEX_Monthl
 
 ## Relevant External
 
-Binance [froze](https://www.coindesk.com/business/2021/11/12/binance-freezes-doge-withdrawals-as-users-report-being-asked-to-return-coins-they-dont-have/) DOGE withdrawals after [apparently](https://twitter.com/dogecoin_devs/status/1458868925039464451) processing a batch of old withdrawal requests accidentally after an upgrade. Binance users reported being asked to return DOGE that was not in their accounts and being informed that they would no longer be able to make withdrawals until they return the DOGE. Elon Musk contributed to raising awareness of the issue by criticising Binance on Twitter. Binance later published their [version](https://www.binance.com/en/blog/community/the-inside-story-on-doge-withdrawals-421499824684903102) of the story confirming that the problem was due to upgrading their wallet while it had old stuck transactions, which were then rebroadcast successfully. The explanation states that withdrawals of DOGE were down for 17 days so they could "re-build the wallet".
+Binance [froze](https://www.coindesk.com/business/2021/11/12/binance-freezes-doge-withdrawals-as-users-report-being-asked-to-return-coins-they-dont-have/) DOGE withdrawals after [apparently](https://twitter.com/dogecoin_devs/status/1458868925039464451) processing a batch of old withdrawal requests accidentally after an upgrade. Binance users reported being asked to return DOGE that was not in their accounts and being informed that they would no longer be able to make withdrawals until they return the DOGE. Elon Musk [contributed](https://twitter.com/elonmusk/status/1463085111600205825) to raising awareness of the issue by criticising Binance on Twitter. Binance later published their [version](https://www.binance.com/en/blog/community/the-inside-story-on-doge-withdrawals-421499824684903102) of the story confirming that the problem was due to upgrading their wallet while it had old stuck transactions, which were then rebroadcast successfully. The explanation states that withdrawals of DOGE were down for 17 days so they could "re-build the wallet".
 
-The NFT concept and its fans have been provoking adverse reactions from some online communities - [Creative Commons](https://twitter.com/creativecommons/status/1463964199785271308) and [Discord](https://arstechnica.com/gaming/2021/11/discord-ceo-backs-away-from-hinted-nft-integration-after-backlash/) have distanced themselves from NFT-related material, while an NFT project for young writers was [scrapped](https://twitter.com/BadWritingTakes/status/1450965836701831175) after a Twitter campaign against it.
+The ECC has [presented](https://electriccoin.co/blog/ecc-roadmap-calls-for-focus-on-wallet-proof-of-stake-and-interoperability/) a new Zcash road map which would see the project shift to proof-of-stake consensus over the next three years, with a focus on cross-chain interoperability and integrating governance features in the wallet. The other area being explored for Zcash is "[shielded assets](https://electriccoin.co/blog/update-ecc-research-and-paths-forward-for-zsas/)", representations of other assets on the Zcash chain, but the report is on the fence about whether this would be beneficial and worthwhile. These priorities had been informed by voting of [forum members](https://vote.heliosvoting.org/helios/elections/5dd57b92-01ed-11ec-a0a8-ae3066fac55d/view) and [coin holders](https://electriccoin.co/blog/coin-holder-poll-results-summary/).
 
-Square [announced](https://bitcoinmagazine.com/business/jack-dorsey-square-decentralized-bitcoin-exchange-proposal-announced-tbdex) a white paper detailing its proposal for a decentralized exchange, tbDEX. Square then [changed](https://squareup.com/us/en/press/square-changes-name-to-block) its name to Block.
+Polkadot held a token [vote](https://vote.polkadot.network/) to decide on the future of their brand, it followed a quadratic voting method which diminished the weight of whale voting accounts and voters picked between two logo and identity directions. The choice of directions was purely aesthetic. The process to revise these assets began in December 2020, it was [funded](https://polkadot.polkassembly.io/bounty/0#4f1773e7-159c-4aa4-be6f-2594092c4fa7) with a budget of 10,000 euros. The final vote to choose one of the competing designs was conducted on a bespoke page and likely marks the first time that most of the 2,097 accounts voted - as the voting interface for funding proposals is much less accessible. { or much more accessible? it seems quite a bit more challenging to vote on the funding proposals, is what I meant here}
 
 A community of crypto investors formed ConstitutionDAO to [try](https://www.vice.com/en/article/qjb8av/constitutiondao-aftermath-everyone-very-mad-confused-losing-lots-of-money-fighting-crying-etc) and buy a rare copy of the US constitution, raised $40 million in ETH but then [lost](https://www.vice.com/en/article/qjb8xv/hedge-fund-ceo-who-bailed-out-gamestop-short-seller-bought-the-constitution) the auction to hedge fund CEO Ken Griffin. This caused a lot of uncertainty about what would happen to the contributed funds, with a new token being announced and cancelled, and the price of the PEOPLE token which contributors to the DAO had received fluctuated wildly. The project ultimately decided to wind down as no agreement could be reached on how to move it forward without the copy of the constitution, contributors can reclaim their ETH (but transaction fees will consume most or all of this for many of the smaller scale contributors) or claim their PEOPLE tokens.
 
@@ -444,9 +443,9 @@ The infamous Infrastructure Bill has been [signed](https://twitter.com/jchervins
 
 Meanwhile, the EU's approach to [regulating](https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A52020PC0593) crypto-asset markets [appears](https://www.reddit.com/r/CryptoCurrency/comments/r218s7/the_most_important_piece_of_regulation_on/) to be proceeding in a more measured fashion and drawing a much clearer boundary around what and who is being regulated.
 
-The ECC has [presented](https://electriccoin.co/blog/ecc-roadmap-calls-for-focus-on-wallet-proof-of-stake-and-interoperability/) a new Zcash road map which would see the project shift to proof-of-stake consensus over the next three years, with a focus on cross-chain interoperability and integrating governance features in the wallet. The other area being explored for Zcash is "[shielded assets](https://electriccoin.co/blog/update-ecc-research-and-paths-forward-for-zsas/)", representations of other assets on the Zcash chain, but the report is on the fence about whether this would be beneficial and worthwhile. These priorities had been informed by voting of [forum members](https://vote.heliosvoting.org/helios/elections/5dd57b92-01ed-11ec-a0a8-ae3066fac55d/view) and [coin holders](https://electriccoin.co/blog/coin-holder-poll-results-summary/).
+The NFT concept and its fans have been provoking adverse reactions from some online communities - [Creative Commons](https://twitter.com/creativecommons/status/1463964199785271308) and [Discord](https://arstechnica.com/gaming/2021/11/discord-ceo-backs-away-from-hinted-nft-integration-after-backlash/) have distanced themselves from NFT-related material, while an NFT project for young writers was [scrapped](https://twitter.com/BadWritingTakes/status/1450965836701831175) after a Twitter campaign against it.
 
-Polkadot held a token [vote](https://vote.polkadot.network/) to decide on the future of their brand, it followed a quadratic voting method which diminished the weight of whale voting accounts and voters picked between two logo and identity directions. The choice of directions was purely aesthetic. The process to revise these assets began in December 2020, it was [funded](https://polkadot.polkassembly.io/bounty/0#4f1773e7-159c-4aa4-be6f-2594092c4fa7) with a budget of 10,000 euros. The final vote to choose one of the competing designs was conducted on a bespoke page and likely marks the first time that most of the 2,097 accounts voted - as the voting interface for funding proposals is much less accessible. { or much more accessible? }
+Square [announced](https://bitcoinmagazine.com/business/jack-dorsey-square-decentralized-bitcoin-exchange-proposal-announced-tbdex) a white paper detailing its proposal for a decentralized exchange, tbDEX. Square then [changed](https://squareup.com/us/en/press/square-changes-name-to-block) its name to Block.
 
 ETH has been added as a currency option by [Sothebys](https://decrypt.co/85841/sothebys-live-ethereum-bids-banksy-auctions) auction house, with live ETH bids being accepted during the auction and displayed on the feed - payment can also be made in BTC, USDC, or fiat currency.
 
