--- a/journal/202212.md
+++ b/journal/202212.md
@@ -409,13 +409,13 @@ Secured the following news articles:
 
 **Selected articles:**
 
-- [Embracing Degeneracy, Part 1 – Decred NFTs](https://www.decredmagazine.com/embracing-degeneracy-part-1-decred-nfts/) by @c12hz.
+- [Embracing degeneracy, part 1 – Decred NFTs](https://www.decredmagazine.com/embracing-degeneracy-part-1-decred-nfts/) by @c12hz.
 - [The P2P World Wide Web](https://www.decredmagazine.com/the-p2p-world-wide-web-bison-relay/) by @phoenixgreen
-- [Imagining the Future of Bison Relay](https://www.decredmagazine.com/imagining-the-future-of-bison-relay/) by @c12hz.
+- [Imagining the future of Bison Relay](https://www.decredmagazine.com/imagining-the-future-of-bison-relay/) by @c12hz.
 - [What does dcrd do?](https://www.decredmagazine.com/what-does-dcrd-do/) by @phoenixgreen and @zippycorners.
 - [Decred vs Bitcoin: From start to the end!](https://www.decredmagazine.com/decred-vs-bitcoin-from-start-to-the-end/) by @Joao
 - [Breaking through the facade of social media delusion](https://www.decredmagazine.com/breaking-through-the-facade-of-social-media-delusion/) by @BlockchainJew
-- [Decred 2022 End of Year Summary](https://www.decredmagazine.com/decred-2022-end-of-year-summary/) by @phoenixgreen
+- [Decred 2022 end of year summary](https://www.decredmagazine.com/decred-2022-end-of-year-summary/) by @phoenixgreen
 
 **Videos:**
 
@@ -423,23 +423,23 @@ Secured the following news articles:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- [2022 the year of the bear - Decred and the state of the market](https://www.youtube.com/watch?v=PO2byx7D8z0) feat. @phoenixgreen @Exitus, and @Tivra.
-- [Decred and the Atomic Swap Revolution - DCRDEX Fundamentals](https://www.youtube.com/watch?v=JyBoe1z5h9U) by @phoenixgreen
+- [2022 the year of the bear - Decred and the State of the Market](https://www.youtube.com/watch?v=PO2byx7D8z0) feat. @phoenixgreen @Exitus, and @Tivra.
+- [Decred and the atomic swap revolution - DCRDEX Fundamentals](https://www.youtube.com/watch?v=JyBoe1z5h9U) by @phoenixgreen
 - [Setting up BisonRelay 0.1.1 on macOS](https://www.youtube.com/watch?v=L4jm-VMPmBo) by @phoenixgreen
-- [Bison Relay - First Look (version 0.1.1)](https://www.youtube.com/watch?v=ukRkQC4IXoo) By @phoenixgreen
-- [My Chat with Decred Founder/CEO Jake](https://www.youtube.com/watch?v=OS_AOyMdAeU) by Py Patel in Piece of the Py Show
-- [Decred News - Bison Relay P2P Chat + Social Media on Lightning is here! Big Dev updates!](https://www.youtube.com/watch?v=K6Cu4Gi7Lp0) by @Exitus
+- [Bison Relay - First look (version 0.1.1)](https://www.youtube.com/watch?v=ukRkQC4IXoo) By @phoenixgreen
+- [My chat with Decred founder/CEO Jake](https://www.youtube.com/watch?v=OS_AOyMdAeU) by Py Patel in Piece of the Py Show
+- [Decred News - Bison Relay P2P chat + social media on Lightning is here! Big dev updates!](https://www.youtube.com/watch?v=K6Cu4Gi7Lp0) by @Exitus
 
 **Audio:**
 
 New Twitter Spaces recordings:
 
-- [Bison Relay: The Sovereign Internet](https://twitter.com/i/spaces/1ZkKzXlVvZqJv) by @Tivra and @kozel.
-- [Exploring Possibilities of Decentralized Social Media](https://twitter.com/i/spaces/1ypKddnRQZvKW) - by @Tivra and @kozel.
+- [Bison Relay: The sovereign Internet](https://twitter.com/i/spaces/1ZkKzXlVvZqJv) by @Tivra and @kozel.
+- [Exploring possibilities of decentralized social media](https://twitter.com/i/spaces/1ypKddnRQZvKW) - by @Tivra and @kozel.
 
 **Art and fun:**
 
-- [2023: Decred A Crypto Odyssey](https://www.decredmagazine.com/2023-decred-a-crypto-odyssey/) by @OfficialCryptos
+- [2023: Decred a crypto odyssey](https://www.decredmagazine.com/2023-decred-a-crypto-odyssey/) by @OfficialCryptos
 
 **Translations:**
 
