--- a/journal/202212.md
+++ b/journal/202212.md
@@ -360,7 +360,7 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer is back up 
 
 The VSP vspd.synergy-crypto.net no longer has live tickets and has been [removed](https://github.com/decred/dcrwebapi/pull/172) from the API. It had been serving since June 2021 and voted a total of 892 tickets. The shutdown was executed cleanly: it stopped accepting new tickets in August 2022 and over the next 4 months all live tickets had been voted.
 
-Poloniex has re-enabled the DCR/BTC market which was frozen since Sep 30 when the exchange [tweeted](https://twitter.com/PoloSupport/status/1575745498933522432) that the DCR wallet is still on maintenance (since January). The market was first re-enabled on Nov 28 but was quickly frozen again for another week until being fully restored on Dec 5. During the same time period the new DCR/USDT trading pair has been live. { maybe move last sent to Markets and expand on the volume }
+Poloniex has re-enabled the DCR/BTC market which was frozen since Sep 30 when the exchange [tweeted](https://twitter.com/PoloSupport/status/1575745498933522432) that the DCR wallet is still on maintenance (since January). The market was first re-enabled on Nov 28 but was quickly frozen again for another week until being fully restored on Dec 5.
 
 Binance was rejecting DCR withdrawals for about 10 days. First reports of rejected withdrawals [surfaced](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$T5Mv2ATD2vgdbAlbIZ7BNGjRTNNWwPqIvzrfELK4vXc?via=decred.org&via=matrix.org&via=t2bot.io) around Dec 12. Some went through on Dec 14 but next day more withdrawals got suspended. Binance shared conflicting information about the cause of the outage. Support [Twitter](https://twitter.com/BinanceHelpDesk/status/1603293107633594369) called it "standard maintenance procedure". In one support ticket they cited DCR network being "busy", but later revealed having insufficient funds in the hot wallet. [Wallet Maintenance Updates](https://www.binance.com/en/support/announcement/c-157?navId=157) lists no posts about the issue as of writing. The issue was resolved around Dec 22. The blockchain was working as expected and no outages or issues were seen elsewhere in the network.
 
@@ -463,6 +463,8 @@ In December DCR was trading between USDT $18.20-$24.80 and BTC 0.00110-0.00145. 
 - https://www.decredmagazine.com/tag/research-and-analytics/
 
 }
+
+The new DCR/USDT market on Poloniex has seen around 1,380 DCR daily average volume, much higher than 315 DCR/day on the old DCR/BTC pair. Interestingly, DCR/BTC market was frozen for the first week while DCR/USDT was active.
 
 { _DCRDEX DOGE markets: Find announcement, volume, order book screenshot_ }
 
